--- a/_posts/个人博客开通.md
+++ b/_posts/个人博客开通.md
@@ -1,20 +1,22 @@
 ---
 layout:     post
-title:      快速搭建个人博客
-subtitle:   手把手教你在半小时内搭建自己的个人博客(如果不踩坑的话🙈🙊🙉)
-date:       2017-02-06
-author:     BY
+title:      个人博客开通
+subtitle:   搭建个人博客，只为你路上的那段光阴。
+date:       2017-08-30
+author:     dboy
 header-img: img/post-bg-re-vs-ng2.jpg
 catalog: true
 tags:
     - Blog
 ---
 
-> 正所谓前人栽树，后人乘凉。
+> 一直想搭建一个个人博客，但是之前需要一定的技术支持以及时间搁置了。就在前几天刚看到一篇关于搭建个人博客的文章，就着手搞起来。
+>
+> 只为你路上的那段光阴，这应该是想写博客的初衷。
 > 
-> 感谢[Huxpro](https://github.com/huxpro)提供的博客模板
+> 感谢[Huxpro](http://qiubaiying.top)提供的博客模板
 > 
-> [我的的博客](http://qiubaiying.top)
+> [我的的博客](http://dboy.top)
 
 # 前言
 从 Jekyll 到 GitHub Pages 中间踩了许多坑，终于把我的个人博客[BY Blog](http://qiubaiying.top)搭建出来了。。。
